# forge-spring25-software

./: .gitignore  .heap.py.swp  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
backend/: Budget.py  GeminiScript2.py  OpenAIScript2.py  PlanSummaries.py  \.json  chatbot.py  check_models.py  convert_pdf_into_viable_s3_data.py  formFormat.json  insurance_databases.py  main.py  mockroot.py  models.py  rankings.py  requirements.txt  root.py  s3_upload.py  test.txt  textract.py  upload_extract.py
backend/API/: .env  PlanSummaries.py  chatHistory.json  main.py  models.py  root.py  upload_extract.py
backend/BackendAPI/: formFormat.json  root.py  upload_extract.py
backend/CSVs/ConnecticutSBEPUF2024/: CTBenefits05102024.csv  CTBusinessRules05102024.csv  CTNetworks05102024.csv  CTPlans05102024.csv  CTRates05102024.csv  CTServiceAreas05102024.csv
backend/CSVs/MaineSBEPUF2024/: MEBusinessRules05102024.csv  MENetworks05102024.csv  MEPlans05102024.csv  MEServiceAreas05102024.csv
backend/CSVs/MassachusettsSBEPUF2024/: MABenefits05102024.csv  MABusinessRules05102024.csv  MANetworks05102024.csv  MAPlans05102024.csv  MAServiceAreas05102024.csv
backend/CSVs/RhodeIslandSBEPUF2024/: RIBenefits05102024.csv  RIBusinessRules05102024.csv  RINetworks05102024.csv  RIPlans05102024.csv  RIRates05102024.csv  RIServiceAreas05102024.csv
backend/CSVs/VermontSBEPUF2024/: VTBenefits05102024.csv  VTBusinessRules05102024.csv  (+4 more)
backend/Chatbot/: chatbot.py
backend/LLM/: AWS Integration Page.md
backend/RankingLogics/: UnweightedPlanRankings.py  rankings.py
frontend/: .gitignore  package-lock.json  package.json
frontend/amplify/: team-provider-info.json
frontend/src/: App.css  App.tsx  aws-exports.d.ts  aws-exports.js  index.css  main.tsx
(+38 files in other folders)
