[project]
name = "spring_2025_backend"
version = "0.1.1"
description = "Project including pandas dataframes"
authors = [
    {name = "Peter SantaLucia, Colin Wong",email = "pdsl2005@gmail.com"}
]
license = {text = "MIT-License"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "pydantic (>=2.10.6,<3.0.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"